cmake_minimum_required(VERSION 3.23)
project(chap02)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(chap02
        예제2-1.cpp
        예제2-2.cpp
        예제2-3.cpp
        예제2-4.cpp
        예제2-5.cpp
        예제2-6.cpp
        예제2-7.cpp
        예제2-8.cpp
        예제2-9.cpp
        예제2-10.cpp
)
