cmake_minimum_required(VERSION 3.23)
project(chap03)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(chap03
        예제3-1.cpp
        예제3-2.cpp
        예제3-3.cpp
        예제3-4.cpp
        예제3-5.cpp
        예제3-6.cpp
        예제3-7.cpp
        예제3-8.cpp
        예제3-9.cpp
        예제3-10.cpp
        예제3-11.cpp
        예제3-12.cpp
        예제3-13.cpp
        예제3-14.cpp
        예제3-15.cpp
        예제3-16.cpp
        예제3-17.cpp
        예제3-18.cpp
        예제3-19.cpp
        예제3-20.cpp
        3장-과제.cpp
        )
