cmake_minimum_required(VERSION 3.23)
project(chap04_2)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(chap04_2
        예제4-1.cpp
        예제4-2.cpp
        예제4-3.cpp
        예제4-4.cpp
        예제4-5.cpp
        예제4-6.cpp
        예제4-7.cpp
        예제4-8.cpp
        예제4-9.cpp
        예제4-10.cpp
        예제4-11.cpp
        예제4-12.cpp
        예제4-13.cpp
        과졔.cpp
        과제-2.cpp)
