cmake_minimum_required(VERSION 3.23)
project(chap05)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(chap05
        예제5-1.cpp
        예제5-1_1.cpp
        예제5-2.cpp
        예제5-3.cpp
        예제5-4.cpp
        예제5-5.cpp
        예제5-6.cpp
        예제5-8.cpp
        예제5-9.cpp
        예제5-10.cpp
        예제5-11.cpp
        예제5-12.cpp
        예제5-13.cpp
        과제1.cpp
        과제2.cpp
        )
