cmake_minimum_required(VERSION 3.23)
project(chap06)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(chap06
        예제6-1.cpp
        예제6-2.cpp
        예제6-3.cpp
        예제6-4.cpp
        예제6-5.cpp
        예제6-6.cpp
        예제6-7.cpp
        예제6-8.cpp
        예제6-9.cpp
        예제6-10.cpp
        예제6-11.cpp
        예제6-12.cpp
        )
