cmake_minimum_required(VERSION 3.23)
project(chap07)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(chap07
        예제7-1.cpp
        예제7-2.cpp
        예제7-3.cpp
        예제7-4.cpp
        예제7-5.cpp
        예제7-6.cpp
        예제7-7.cpp
        예제7-8.cpp
        예제7-9.cpp
        예제7-10.cpp
        예제7-11.cpp
        예제7-12.cpp
        예제7-13.cpp
        )
