cmake_minimum_required(VERSION 3.23)
project(chap10)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(chap10
        예제10-1.cpp
        예제10-2.cpp
        예제10-3.cpp
        예제10-4.cpp
        예제10-5.cpp
        예제10-6.cpp
        예제10-7.cpp
        예제10-8.cpp
        예제10-9.cpp
        예제10-10.cpp
        예제10-11.cpp
        예제10-12.cpp
        )
