cmake_minimum_required(VERSION 3.23)
project(chap11)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(chap11
        예제11-1.cpp
        예제11-2.cpp
        예제11-3.cpp
        예제11-4.cpp
        예제11-5.cpp
        예제11-6.cpp
        예제11-7.cpp
        예제11-8.cpp
        예제11-9.cpp
        예제11-10.cpp
        예제11-11.cpp
        예제11-12.cpp
        예제11-13.cpp
        )
