cmake_minimum_required(VERSION 3.23)
project(chap12)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(chap12
        예제12-1.cpp
        예제12-2.cpp
        예제12-3.cpp
        예제12-4.cpp
        예제12-5.cpp
        예제12-6.cpp
        예제12-7.cpp
        예제12-8.cpp
        예제12-9.cpp
        예제12-11.cpp
        예제12-12.cpp
        )
